I fixed a bug with scoring. I moved the start game button so it isn't overlapped by the game selection drop down.

--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -97,6 +97,10 @@
   display: none;
 }
 
+#start-game-btn {
+  margin-top: 5px;
+}
+
 .show-inline {
   display: inline-block !important;
 }
